5.13.1
添加对 NeoKeyManager 1.0 的完整支持